# 2IPH0-pegsolitaire

./: .gitignore  PegSolitaire.cabal  README.md
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: PegSolitaire-0.1.0.0-inplace.conf  package.cache
src/: PegSolitaire.hs
test/: Spec.hs
